<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">QuickTest</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="login_text">Log in or register</string>
    <string name="action_settings">Settings</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="questionsCount">Question %1$d out of %2$d</string>
    <string name="Version">Version %1$s</string>
    <string name="CheckBox_Remember">Remember my account details</string>
    <string name="incorrect_answer">Incorrect answer!</string>
    <string name="correct_answer">Correct!</string>
    <string name="not_connected">We are not connected to the Internet</string>
    <string name="connected">Retrieving the questions from our servers</string>
    <string name="countDown">%1$s seconds</string>
    <string name="newGame">New Game</string>
    <string name="score">Score</string>
    <string name="exit">Exit</string>
    <string name="goodbye">Good bye!</string>
    <string name="timesUp">Time\'s Up!</string>
    <string name="lastGameInfo">Your last game details:</string>
    <string name="badges">These are the badges you have unlocked:</string>
    <string name="lastGameData">You successfully answered %1$s questions out of 10 in %2$s seconds</string>
    <string name="backToMenu">Back to Main Menu</string>

</resources>