<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/textView_login"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_nick"
        android:password="false"
        android:editable="true"
        android:layout_below="@+id/textView_login"
        android:layout_alignRight="@+id/editText_pass"
        android:layout_alignEnd="@+id/editText_pass"
        android:layout_alignLeft="@+id/editText_pass"
        android:layout_alignStart="@+id/editText_pass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_pass"
        android:editable="true"
        android:password="true"
        android:layout_below="@+id/editText_nick"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBox_Remember"
        android:id="@+id/checkBox_remember"
        android:checked="true"
        android:layout_below="@+id/editText_pass"
        android:layout_alignRight="@+id/editText_pass"
        android:layout_alignEnd="@+id/editText_pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button_login"
        android:layout_below="@+id/checkBox_remember"
        android:layout_toRightOf="@+id/textView_login"
        android:layout_toEndOf="@+id/textView_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textColor="#ffff3844"
        android:textStyle="bold|italic"
        android:textSize="@dimen/titleSize"
        android:layout_marginBottom="94dp"
        android:layout_above="@+id/textView_login"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/textView_register"
        android:layout_alignBottom="@+id/button_login"
        android:layout_alignLeft="@+id/checkBox_remember"
        android:layout_alignStart="@+id/checkBox_remember"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#ff0000ff" />


</RelativeLayout>
